force-app/main/default/objects/Booked_Car_Parking__c/Booked_Car_Parking__c.object-meta.xml
<CustomObject>
    <label>Booked Car Parking</label>
    <nameField>
        <displayFormat>BCP-{0000}</displayFormat>
        <label>Booked Car Parking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booked Car Parking</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>