force-app/main/default/objects/Booked_Car_Parking__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Parking Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>