force-app/main/default/objects/Booked_Car_Parking__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Booked Car Parking</relationshipLabel>
    <relationshipName>Booked_Car_Parking</relationshipName>
    <type>Lookup</type>
</CustomField>