force-app/main/default/objects/Booked_Car_Parking__c/fields/Car_Parking_Charge__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Parking Charge</label>
    <referenceTo>Car_Parking_Charge__c</referenceTo>
    <relationshipLabel>Booked Car Parking</relationshipLabel>
    <relationshipName>Booked_Car_Parking</relationshipName>
    <type>Lookup</type>
</CustomField>