force-app/main/default/objects/Booked_Car_Parking__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Booked Car Parking</relationshipLabel>
    <relationshipName>Booked_Car_Parking</relationshipName>
    <type>Lookup</type>
</CustomField>