force-app/main/default/objects/Booked_Car_Parking__c/fields/Project_Unit__c.field-meta.xml
<CustomField>
    <fullName>Project_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Unit</label>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipLabel>Booked Car Parking</relationshipLabel>
    <relationshipName>Booked_Car_Parking</relationshipName>
    <type>Lookup</type>
</CustomField>